--- a/apps/iris/index.html
+++ b/apps/iris/index.html
@@ -51,6 +51,6 @@
   </head>
   <body>
     <div id="root" class="flex justify-center min-h-screen bg-base-200"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
