--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
-    <div id="root" class="flex justify-center min-h-screen bg-base-200"></div>
+    <div id="root" class="flex justify-center h-full bg-base-200"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
